--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 :root {
     --color-primario: #4a90e2;
     --color-secundario: #0a0f1c;
@@ -20,13 +19,13 @@ body {
     line-height: 1.6;
     min-height: 100vh;
     animation: fadeIn 1s ease-in;
+    overflow-x: hidden; /* Añade esta línea */
 }
 
 @keyframes fadeIn {
     from { opacity: 0; }
     to { opacity: 1; }
 }
-
 
 /* Header / Navbar */
 .navbar {
